# Chismosa-bot

./: .gitignore  .replit  README.md  chismes.py  chismes.txt  chismosadb.sql  funcs.py  intents.json  main.py  music.py  pyproject.toml  requirements.txt  utils.py
db/: chismosadb.sql
src/: chismes.py  helper_functions.py  main.py  user_management_functions.py
