[tool.poetry]
name = "chismosa-bot"
version = "0.1.0"
description = ""
authors = ["Juansu01 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
"discord.py" = "^1.7.3"
PyNaCl = "^1.5.0"
youtube_dl = "^2021.12.17"
Flask = "^2.0.3"
replit = "^3.2.4"
DiscordUtils = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
